--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=protocol-api
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/blockwin
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+## Hibernate properties
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.open-in-view=false
