Kafka topic created. AES encryption mechanism architecture enhanced. Mechanism for validator UUID generation. New endpoint for validator registration added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,16 @@ security.jwt.expiration-time=3600000
 # Redis configuration
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+# Apache Kafka configuration
+# consumer configuration
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=services
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+# producer configuration
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringDeserializer
